Production/Production/src/objects/Social_Media_Verification_Form__c.object
<CustomObject>
    <description>Social Media Verification Form used to link Social Personas &amp; Community Users to Contacts and Accounts.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number from Web form used to link to Salesforce case.</description>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Case Number from Web form used to link to Salesforce case.</description>
        <label>Case Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer at time of form completion?</inlineHelpText>
        <label>Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SF_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link the Social Media Verification object to a related case.</description>
        <label>SF Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Social Media Verification Forms</relationshipLabel>
        <relationshipName>Social_Media_Verification_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Social Media Verification Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMVF-{00000000}</displayFormat>
        <label>SM Verification Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Verification Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>